# LangservExample

./: pyproject.toml  requirements.txt
astra-app/: .env.example  .gitignore  README.md  drop_collection.sh  pyproject.toml
astra-app/app/: server.py
