[tool.poetry]
name = "astra-app"
version = "0.1.0"
description = ""
authors = ["Yoshi Kimoto <yy.kimoto@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.22"}
pydantic = "<2"
rag-astradb-private = {path = "packages/rag-astradb-private", develop = true}


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
